Updated project settings and removed OldestGraphView

--- a/CSE494_Assignment_1/CSE494_Assignment_1/res/layout/activity_main.xml
+++ b/CSE494_Assignment_1/CSE494_Assignment_1/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:id="@+id/graphView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            class="edu.asu.cse494_assignment_1.OldestGraphView" />
+            class="edu.asu.cse494_assignment_1.GraphView" />
 
     </RelativeLayout>
 
