--- a/CSE494_Assignment_1/CSE494_Assignment_1/res/layout/graph_view.xml
+++ b/CSE494_Assignment_1/CSE494_Assignment_1/res/layout/graph_view.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <edu.asu.cse494_assignment_1.OldestGraphView
+    <edu.asu.cse494_assignment_1.GraphView
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:background="#ccc" />
