--- a/CSE494_Assignment_1/CSE494_Assignment_1/res/values/attrs_graph_view.xml
+++ b/CSE494_Assignment_1/CSE494_Assignment_1/res/values/attrs_graph_view.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <declare-styleable name="OldestGraphView">
+    <declare-styleable name="GraphView">
     </declare-styleable>
 
 </resources>
