--- a/CSE494_assignment_2/app/src/main/res/layout/graph_view.xml
+++ b/CSE494_assignment_2/app/src/main/res/layout/graph_view.xml
@@ -1,15 +1,7 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <edu.asu.cse494_assignment_2.GraphView
-        android:background="#ccc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp" />
-
-</FrameLayout>
+</LinearLayout>
