--- a/CSE494_assignment_2/app/src/main/res/values/attrs_graph_view.xml
+++ b/CSE494_assignment_2/app/src/main/res/values/attrs_graph_view.xml
@@ -1,5 +1,2 @@
-<resources>
-    <declare-styleable
-        name="GraphView">
-    </declare-styleable>
-</resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources></resources>
